--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kullaniciadi.github.io/proje-adi",
+  "homepage": "https://CenkMerk.github.io/Alisveris-Sepeti-Uygulamasi",
   "name": "alisveris-sepeti-uygulamasi",
   "version": "0.1.0",
   "private": true,
